--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "jszip": "https://aistudiocdn.com/jszip@3.10.1"
+    "jszip": "https://aistudiocdn.com/jszip@3.10.1",
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24"
   }
 }
 </script>
