--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 950: '#0d1117',
               },
               primary: {
-                400: '#818cf8',
-                500: '#6366f1',
-                600: '#4f46e5',
-                900: '#312e81',
+                400: 'var(--primary-400)',
+                500: 'var(--primary-500)',
+                600: 'var(--primary-600)',
+                900: 'var(--primary-900)',
               },
             },
             fontFamily: {
@@ -54,6 +54,10 @@
     <style>
       :root {
         color-scheme: dark;
+        --primary-400: #818cf8;
+        --primary-500: #6366f1;
+        --primary-600: #4f46e5;
+        --primary-900: #312e81;
       }
       body { 
         background-color: #0d1117; 
@@ -90,7 +94,7 @@
         width: 80px;
         height: 80px;
         border-radius: 50%;
-        background: radial-gradient(circle at center, #6366f1 0%, transparent 60%);
+        background: radial-gradient(circle at center, var(--primary-500) 0%, transparent 60%);
         box-shadow: 0 0 40px rgba(99, 102, 241, 0.2);
         animation: pulse-core 2.5s infinite ease-in-out;
         position: relative;
@@ -101,7 +105,7 @@
         position: absolute;
         inset: -20px;
         border: 2px solid rgba(99, 102, 241, 0.15);
-        border-top-color: #6366f1;
+        border-top-color: var(--primary-500);
         border-radius: 50%;
         animation: spin 3s linear infinite;
       }
@@ -115,7 +119,7 @@
 
       .loader-text {
         font-family: 'JetBrains Mono', monospace;
-        color: #818cf8;
+        color: var(--primary-400);
         letter-spacing: 3px;
         font-size: 11px;
         font-weight: 600;
